Bug 85959 - X crashes right after start / when running multiple benchmark testcases
Summary: X crashes right after start / when running multiple benchmark testcases
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-06 11:22 UTC by valtteri.rantala
Modified: 2017-07-24 22:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Dmesg file from the run (55.11 KB, text/plain)
2014-11-06 11:22 UTC, valtteri.rantala
no flags Details
From Xorg.log the backtrace part (3.55 KB, text/plain)
2014-11-06 12:12 UTC, valtteri.rantala
no flags Details
Xorg.log (18.90 KB, text/plain)
2014-11-06 12:12 UTC, valtteri.rantala
no flags Details

Description valtteri.rantala 2014-11-06 11:22:57 UTC
Created attachment 109022 [details]
Dmesg file from the run

X Crashes right after reboot. Dmesg reports page fault

System Environment:
--------------------------
Platform: Broadwell
drm git://anongit.freedesktop.org/git/mesa/drm origin/master 00847fa48b83a85b0cb882594a12ed1511f780db
mesa git://anongit.freedesktop.org/git/mesa/mesa origin/master 9e2473763d43f97e46561530e091473dc1e5780d
xserver git://anongit.freedesktop.org/git/xorg/xserver origin/master 63bb5c5ef16edf652179770294dcca4fc07dc992
xf86-video-intel git://anongit.freedesktop.org/git/xorg/driver/xf86-video-intel origin/master ba408bf21c4b65f19c7b581e4c88c92805184334
libva git://anongit.freedesktop.org/git/vaapi/libva origin/master ccd93de5a707e92a629cccd595757c8d436fa3cc
intel-driver git://anongit.freedesktop.org/git/vaapi/intel-driver origin/master 24cba20a119c96556ae4dc9a90043896ea70e567
drm-intel git://anongit.freedesktop.org/drm-intel origin/drm-intel-nightly f8fcadba218fe6d23b2e353fea1cf0a4be4c9454 


Drm-intel:

The bisected to commit: f8fcadba218fe6d23b2e353fea1cf0a4be4c9454 

Reproduction steps:
On BDW/HSW brixbox X crashes right after boot or when running multiple benchmarks (unigine -> glbenchmark -> gfxbench) 
Is bit hard to reproduce. At least with HSW laptop it seems not to be reproducible.
1. Reboot machine with that build
2. If X does not crash try running multiple benchmark test. Try running in this order unigine -> glbenchmark -> gfxbench

Part of dmesg:

[ 2357.881404] ------------[ cut here ]------------
[ 2357.881408] WARNING: CPU: 3 PID: 1223 at drivers/gpu/drm/i915/i915_gem.c:1641 i915_gem_fault+0x1e2/0x340()
[ 2357.881411] unhandled error in i915_gem_fault: -22
[ 2357.881413] Modules linked in: snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic intel_rapl x86_pkg_temp_thermal intel_powerclamp coretemp snd_hda_intel crct10dif_pclmul crc32_pclmul snd_hda_controller snd_hda_codec smsc75xx usbnet snd_hwdep ghash_clmulni_intel mii snd_pcm mei_me mei lpc_ich i2c_hid i2c_designware_platform i2c_designware_core
[ 2357.881438] CPU: 3 PID: 1223 Comm: Xorg Tainted: G        W      3.18.0-rc3-gfxbench+ #1
[ 2357.881440] Hardware name: Dell Inc. XPS 12-9Q33/XPS 12-9Q33, BIOS A04 12/03/2013
[ 2357.881442]  0000000000000009 ffff8800d5727bc8 ffffffff81758bf5 0000000000000001
[ 2357.881447]  ffff8800d5727c18 ffff8800d5727c08 ffffffff810678fc ffffffff81aad600
[ 2357.881453]  0000000000000002 0000000000000001 ffff8800d4550800 ffff88009f20b210
[ 2357.881458] Call Trace:
[ 2357.881462]  [<ffffffff81758bf5>] dump_stack+0x4f/0x7c
[ 2357.881466]  [<ffffffff810678fc>] warn_slowpath_common+0x7c/0xa0
[ 2357.881470]  [<ffffffff81067961>] warn_slowpath_fmt+0x41/0x50
[ 2357.881476]  [<ffffffff81492c8a>] ? i915_gem_object_ggtt_unpin+0x4a/0x80
[ 2357.881480]  [<ffffffff814968a2>] i915_gem_fault+0x1e2/0x340
[ 2357.881485]  [<ffffffff811430a4>] __do_fault+0x34/0x70
[ 2357.881490]  [<ffffffff8108cf41>] ? get_parent_ip+0x11/0x50
[ 2357.881495]  [<ffffffff8114584c>] do_shared_fault.isra.84+0x2c/0x1a0
[ 2357.881499]  [<ffffffff81143ce6>] ? __pte_alloc+0xa6/0x140
[ 2357.881504]  [<ffffffff8114ad90>] ? vma_link+0x80/0xc0
[ 2357.881508]  [<ffffffff811473d4>] handle_mm_fault+0x234/0xd90
[ 2357.881513]  [<ffffffff8114cdd9>] ? mmap_region+0x1a9/0x600
[ 2357.881519]  [<ffffffff81038021>] __do_page_fault+0x141/0x570
[ 2357.881523]  [<ffffffff81135d6d>] ? vm_mmap_pgoff+0x6d/0xa0
[ 2357.881529]  [<ffffffff8118bf10>] ? do_vfs_ioctl+0x2e0/0x4c0
[ 2357.881535]  [<ffffffff8103845c>] do_page_fault+0xc/0x10
[ 2357.881539]  [<ffffffff817617a2>] page_fault+0x22/0x30
[ 2357.881542] ---[ end trace 8796d4f938f80406 ]---
Comment 1 Chris Wilson 2014-11-06 11:29:29 UTC
What's the stacktrace for the actual crash? All apart from vbo, X should be robust against such upsets...
Comment 2 valtteri.rantala 2014-11-06 12:12:15 UTC
Created attachment 109027 [details]
From Xorg.log the backtrace part
Comment 3 valtteri.rantala 2014-11-06 12:12:54 UTC
Created attachment 109028 [details]
Xorg.log
Comment 4 valtteri.rantala 2014-11-06 12:15:20 UTC
Xorg.log from the run added
Comment 5 Chris Wilson 2014-11-06 12:44:52 UTC
This should cover the ddx crash:

commit 33764685cbcd01548b6a23c217c7b511c1639694
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 6 12:40:20 2014 +0000

    sna: Wrap prefaulting with sigtrap()
    
    Handle a potential SIGBUS due to kernel bugs when prefaulting the
    scanout surface.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=85959
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Any more?
Comment 6 valtteri.rantala 2014-11-07 13:31:10 UTC
This fixes the crashing X issue, so closing this one.
Comment 7 Chris Wilson 2014-11-07 13:34:50 UTC
As you probably realised the kernel regression was bug 85896


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.