sna: Wrap prefaulting with sigtrap()

Handle a potential SIGBUS due to kernel bugs when prefaulting the
scanout surface.

References: https://bugs.freedesktop.org/show_bug.cgi?id=85959
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>